<resources>
    <string name="app_name"> Development </string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="label_existing_user">Existing Student</string>
    <string name="label_new_user">New Student</string>
    <string name="label_signin">Sign In</string>
    <string name="label_login">Login In</string>
    <string name="label_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_newuser">Sign up!</string>
    <string name="label_forgot">Forgot Password?</string>
    <string name="alert_headtext_no_sliding_images">Some Error Occurred During Splash Screen Loading</string>
    <string name="login_failed_contact_admin">Login failed.\nContact site admin.</string>
    <string name="no_data">No items to display</string>
    <string name="no_games_avaliable">There are no games available at this time.</string>
    <string name="alert_nocat_selected"> Please select at least one component </string>
    <string name="loadingtxt">Loading...</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="document">Document</string>
    <string name="website_url">Website URL</string>
    <string name="filter">Filter</string>
    <string name="askaquestion">Ask a Question</string>
    <string name="get_file_button">Choose File</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="pref_WiFiClientIp">WiFiClientIp</string>
    <string name="pref_GroupOwnerAddress">GroupOwnerAddress</string>
    <string name="pref_ServerBoolean">ServerBoolean</string>
    <string name="pref_head_sitesettings">Site Settings</string>
    <string name="pref_head_preferences">Preferences</string>
    <string name="pref_head_notifications">Notifications</string>
    <string name="pref_head_download">Download</string>
    <string name="pref_head_updates">Updates</string>
    <string name="pref_chk_label_reset_url">Reset Site URL</string>
    <string name="pref_edit_label_change_url">Change Site URL</string>
    <string name="pref_alert_title_edit_url">Enter Site URL</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="pref_txt_reset_url">This option will reset the site URL to the default learning portal (for demonstration only).</string>
    <string name="pref_txt_change_url">You can connect to your learning portal by changing the site URL. Please contact your administrator to get this URL.</string>
    <string name="pref_txt_label_target_reminder">Assigned content target reminder</string>
    <string name="pref_txt_label_assignment">Content assignment</string>
    <string name="pref_txt_label_new_content">New content items available in the catalog</string>
    <string name="pref_txt_label_unassignment">Content items unassigned</string>
    <string name="pref_txt_label_auto">Enable content auto-download</string>
    <string name="pref_txt_label_mobile">Enable content download with mobile data</string>
    <string name="pref_txt_label_check_updates">Check for updates</string>
    <string name="alert_btntext_sitrurlchange">The URL is not Valid or Check the Internet Connection</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="btn_txt_signin">Sign In</string>
    <string name="btn_txt_view">View</string>
    <string name="btn_txt_enroll">Enroll</string>
    <string name="btn_txt_add">Add</string>
    <string name="btn_txt_add_to_calendar">Add to Calendar</string>
    <string name="btn_txt_cancel_enrolment">Cancel Enrolment</string>
    <string name="btn_txt_added_to_calendar">Added To Calendar</string>
    <string name="btn_txt_details">Details</string>
    <string name="btn_txt_cancel">Cancel</string>
    <string name="btn_txt_join">Join</string>
    <string name="btn_txt_report">Report</string>
    <string name="btn_txt_related">Related content</string>
    <string name="btn_txt_reattempt">Reattempt</string>
    <string name="btn_txt_setcomplete">Set Complete</string>
    <string name="btn_txt_buy">Buy</string>
    <string name="btn_txt_delete">Delete</string>
    <string name="btn_txt_download">Download</string>
    <string name="btn_label_existing_user">Existing User</string>
    <string name="btn_label_new_user">New User</string>
    <string name="btn_txt_play">Play</string>
    <string name="metadata_label_status">Status:</string>
    <string name="metadata_label_author">Author:</string>
    <string name="metadata_label_moderator">Moderator:</string>
    <string name="metadata_label_ctype">Content type:</string>
    <string name="metadata_status_completed">Completed</string>
    <string name="metadata_status_progress">In Progress</string>
    <string name="metadata_status_notstarted">Not Started</string>
    <string name="metadata_status_pending">Pending review</string>
    <string name="browseby_lbl_category">Category</string>
    <string name="browseby_lbl_skills">Skill</string>
    <string name="browseby_lbl_jobroles">Job Role</string>
    <string name="browseby_lbl_contenttype">Content Type</string>
    <string name="download_head">Auto-download</string>
    <string name="download_go">Continue Download</string>
    <string name="download_no">Turn-off Auto Download</string>
    <string name="download_info">Auto-download option will download your &#8216;My Learning&#8217; content automatically to your device. If you turn-off auto-download, you can turn it on from Settings later.</string>
    <string name="download_notify">Downloading content</string>
    <string name="download_notify_no_content">No Content to download</string>
    <string name="download_complete">Download Completed</string>
    <string name="download_fail">Downloading Failed</string>
    <string name="download_size_exeeded">Cannot download due to exeeded content size.</string>
    <string name="download_already">Already Downloaded</string>
    <string name="cat_add_success">Content Added to My Learning</string>
    <string name="event_add_success">This Event item has been added to "My Learning" page</string>
    <string name="mycatalog_enddurationdate">The content you have selected has been expired</string>
    <string name="event_cancelled">Your have successfully cancelled the enrolled event</string>
    <string name="event_addedto_calender">This Event item has been added to Calendar</string>
    <string name="cat_add_failed">Failed to add content to My Learning</string>
    <string name="cat_add_already">Content already in My Learning</string>
    <string name="event_cancel">Event removed from My Learning</string>
    <string name="cat_need_internet_to_add">You need internet connection to add course</string>
    <string name="cat_need_internet_to_buy">You need internet connection to buy a course</string>
    <string name="cat_need_internet_to_rate">You need internet connection to rate content</string>
    <string name="mycat_need_internet_to_course">You need internet connection to access courses.\nOtherwise download content for offline access.</string>
    <string name="alert_text_need_internet_to_discussion">You need internet connection to access discussion forums</string>
    <string name="mycat_need_internet_to_download">You need internet connection to download course(s)</string>
    <string name="menu_need_internet_to_view">You need internet connection to navigate to this menu.</string>
    <string name="web_screen_internet_lost">There is no network connection available.\nGo back to browse courses</string>
    <string name="rating_update_fail">Content rating update failed</string>
    <string name="rating_update_success">Content rating successfully updated</string>
    <string name="status_update_fail">Content statusActual update failed</string>
    <string name="status_update_success">Content statusActual successfully updated</string>
    <string name="alert">Alert</string>
    <string name="alert_btntext_OK">OK</string>
    <string name="alert_btntext_Yes">Yes</string>
    <string name="alert_btntext_No">No</string>
    <string name="alert_btntext_Submit"> Reset Password </string>
    <string name="alert_btntext_Save">Save</string>
    <string name="alert_btntext_Cancel">Cancel</string>
    <string name="alert_headtext_success">Success</string>
    <string name="alert_headtext_failed">Failed</string>
    <string name="alert_headtext_no_url">URL not found!</string>
    <string name="alert_headtext_invalid_url">Invalid URL!</string>
    <string name="alert_headtext_email_notvalid">Email not valid</string>
    <string name="alert_headtext_no_guest_content">No guest content</string>
    <string name="password_reset_link_send_success">Password reset link sent to registered email.\nPlease check your inbox.</string>
    <string name="alert_text_need_valid_email">Please enter a valid registered email.</string>
    <string name="alert_text_site_not_accessible">Could not connect to server. Please contact your administrator.</string>
    <string name="alert_text_check_connection">Please check your internet connection and try again.</string>
    <string name="alert_text_connection_lost">The internet connection is lost. You can access the downloaded content (if any) from the &#8216;My Learning&#8217;</string>
    <string name="ctx_sortby_select">Select</string>
    <string name="ctx_sortby_recent_activity">Sort by recent activity</string>
    <string name="ctx_sortby_most_answer">Sort by most answer</string>
    <string name="ctx_sortby_views">Sort by views</string>
    <string name="ctx_sortby_title">Sort by title</string>
    <string name="mylearning_actionsheet_viewoption">View</string>
    <string name="mylearning_actionsheet_playoption">Play</string>
    <string name="mylearning_actionsheet_detailsoption">Details</string>
    <string name="mylearning_actionsheet_joinoption">Join</string>
    <string name="mylearning_actionsheet_reportoption">Report</string>
    <string name="mylearning_actionsheet_relatedcontentoption">Related Content</string>
    <string name="mylearning_actionsheet_addtocalendaroption">Add to Calendar</string>
    <string name="mylearning_actionsheet_setcompleteoption">Set Complete</string>
    <string name="mylearning_actionsheet_deleteoption">Delete</string>
    <string name="mylearning_actionsheet_cancelenrollmentoption">Cancel Enrollment</string>
    <string name="mylearning_actionsheet_addtoarchive">Archive</string>
    <string name="mylearning_actionsheet_removefromarchive">Unarchive</string>
    <string name="ratinscreen_submit">Submit</string>
    <string name="ratinscreen_cancel">Cancel</string>
    <string name="ratinscreen_write">Write your feedback here...</string>
    <string name="mylearning_actionsheet_downloadoption">Download</string>
</resources>