<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/ctx_play"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_playoption" />

    <item
        android:id="@+id/ctx_view"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_viewoption" />
    <item
        android:id="@+id/ctx_detail"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_detailsoption" />

    <item
        android:id="@+id/ctx_join"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_joinoption" />

    <item
        android:id="@+id/ctx_download"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_downloadoption" />

    <item
        android:id="@+id/ctx_report"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_reportoption" />

    <item
        android:id="@+id/ctx_addtocalender"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_addtocalendaroption" />

    <item
        android:id="@+id/ctx_complete"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_setcompleteoption" />

    <item
        android:id="@+id/ctx_relatedcontent"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_relatedcontentoption" />

    <item
        android:id="@+id/ctx_cancelenrollment"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_cancelenrollmentoption" />

    <item
        android:id="@+id/ctx_delete"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_deleteoption" />

    <item
        android:id="@+id/ctx_addtoarchive"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_addtoarchive"
        android:visible="false" />

    <item
        android:id="@+id/ctx_removearchive"
        android:orderInCategory="100"
        android:title="@string/mylearning_actionsheet_removefromarchive"
        android:visible="false" />


</menu>

