<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">

            <RatingBar
                android:id="@+id/detailRatingBar"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:rating="3.0"
                android:stepSize="1.0" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_border"
            android:gravity="top|start"
            android:hint="@string/ratinscreen_write"
            android:maxLength="1000"
            android:maxLines="100"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtcancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="actionsBottomBtns"
            android:text="@string/ratinscreen_cancel"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:id="@+id/txtsave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="actionsBottomBtns"
            android:text="@string/ratinscreen_submit"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />


    </LinearLayout>
</RelativeLayout>